# mcp-voipnow

./: DOCUMENTATION.md  LICENSE  README.md
calls/: .env.example  .gitignore  .mcpbignore  Containerfile  DOCUMENTATION.md  README.md  config.json.example  manifest.json  package-lock.json  package.json  tsconfig.json
calls/src/: index.ts  logger.ts  servers.ts  tool-registry.ts  utils.ts
calls/src/auth/: auth.ts
calls/src/token/: utils.ts
calls/src/tools/: cdr-list.ts  extensions-phone-call-events-create.ts  extensions-phone-call-events-delete.ts  faxes-create.ts  (+15 more)
calls/test/: README.md  ai_agent.py  mcp_agent.py  requirements.txt  test_cdr_list_ai.py  test_class.py  test_phone_calls_create_ai.py  test_phone_calls_delete_ai.py  test_phone_calls_hold_ai.py  test_phone_calls_list_ai.py  test_phone_calls_monitor_ai.py  test_phone_calls_park_ai.py  test_phone_calls_recording_ai.py  test_phone_calls_transfer_ai.py
provisioning/: .gitignore  .mcpbignore  Containerfile  DOCUMENTATION.md  README.md  config.json.example  manifest.json  pyproject.toml
provisioning/src/: main.py
provisioning/src/auth/: auth.py
provisioning/src/tools/: __init__.py  billing.py  channel.py  extension.py  pbx.py  report.py
provisioning/src/tools/entity/: __init__.py  add.py  delete.py  edit.py  get.py  get_details.py  get_permissions_limits.py  get_user_groups.py  move_organization.py  set_control_panel_access.py  set_permissions_limits.py  set_status.py  update_permissions_limits.py
provisioning/src/utils/: logger.py  server.py  token.py  tool_registry.py  utils.py  vars.py
